<resources>
    <string name="app_name" translatable="false">Mobile Parts Shop Staff</string>
    <string name="saved">Saved</string>
    <!-- Strings related to LoginFragment -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, %s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to BottomNavigationView -->
    <string name="menu_profile">Profile</string>
    <string name="menu_management">Management</string>
    <string name="menu_settings">Settings</string>
    <!-- Strings related to ManagementFragment -->
    <string name="btn_manage_manufacturers">Manage manufacturers</string>
    <string name="btn_manage_device_types">Manage device types</string>
    <string name="btn_manage_part_types">Manage part types</string>
    <string name="btn_manage_parts">Manage parts</string>
    <!-- Strings related to SettingsFragment -->
    <string name="btn_back">Back</string>
    <string name="label_language">Language</string>
    <string name="label_theme">Theme</string>
    <string name="item_language_en" translatable="false">English</string>
    <string name="item_language_uk" translatable="false">Українська</string>
    <string name="item_theme_system_default">System Default</string>
    <string name="item_theme_light">Light</string>
    <string name="item_theme_dark">Dark</string>
    <!-- Strings related to AddManufacturerFragment -->
    <string name="hint_manufacturer_name">Manufacturer\'s name</string>
    <string name="save_manufacturer">Save manufacturer</string>
    <string name="cancel">Cancel</string>
    <string name="select_manufacturer_logo">Select manufacturer\'s logo</string>
    <string name="manufacturer_logo_preview">Manufacturer\'s logo preview</string>
    <string name="invalid_manufacturer_name">Invalid manufacturer\'s name</string>
    <string name="invalid_manufacturer_logo">Manufacturer\'s logo not selected</string>
    <!-- Strings related to item_manufacturer -->
    <string name="manufacturer_logo">Manufacturer\'s logo</string>
    <string name="add_manufacturer">Add manufacturer</string>
    <string name="description_edit_manufacturer">Edit manufacturer</string>
    <string name="description_delete_manufacturer">Delete manufacturer</string>
    <!-- Strings related to ManagePartsFragment -->
    <string name="add_part">Add part</string>
    <string name="part_image">Part\'s image</string>
    <!-- Strings related to item_part -->
    <string name="price_placeholder">Price: %s UAH</string>
    <string name="description_edit_part">Edit part</string>
    <string name="description_delete_part">Delete part</string>
    <!-- Strings related to AddPartFragment -->
    <string name="hint_part_name">Part name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_device_models">Device Models</string>
    <string name="hint_specifications">Specifications</string>
    <string name="description_part_image">Part\'s image</string>
    <string name="select_part_image">Select part image</string>
    <string name="save_part">Save part</string>
    <string name="select_manufacturer">Select manufacturer:</string>
    <string name="select_device_type">Select device type:</string>
    <string name="select_part_type">Select part type:</string>
    <string name="invalid_price">Invalid price</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="invalid_part_name">Invalid part name</string>
    <string name="invalid_specifications">Invalid specifications</string>
    <string name="invalid_manufacturer">Invalid manufacturer</string>
    <string name="invalid_device_type">Invalid device type</string>
    <string name="invalid_part_type">Invalid part type</string>
    <string name="invalid_part_image">Part image not selected</string>
    <!-- Strings related to ProfileFragment -->
    <string name="full_name_placeholder">Full name: %s %s</string>
    <string name="username_placeholder">Username: %s</string>
    <string name="user_id_placeholder">User ID: %d</string>
    <string name="authority_customer">Authority: Customer</string>
    <string name="authority_staff">Authority: Staff</string>
    <string name="authority_admin">Authority: Administrator</string>
    <string name="change_personal_info">Change personal info</string>
    <string name="manage_assigned_orders">Manage assigned orders</string>
    <string name="generate_report">Generate report</string>
    <string name="save">Save</string>
    <string name="user_avatar">User\'s avatar</string>
    <string name="logout">Logout</string>
    <!-- Strings related to item_order -->
    <string name="open_order">Open order</string>
    <string name="order_id_placeholder">Order ID: %d</string>
    <string name="order_customer_id_placeholder">Customer ID: %d</string>
    <string name="order_status_placeholder">Status: %s</string>
    <string name="order_date_placeholder">Date: %s</string>
    <string name="order_address_placeholder">Address: %s</string>
    <string name="order_status_pending">pending</string>
    <string name="order_status_processing">processing</string>
    <string name="order_status_shipping">shipping</string>
    <string name="order_status_delivered">delivered</string>
    <string name="order_status_completed">completed</string>
    <string name="order_status_canceled">canceled</string>
    <!-- Strings related to item_order_item -->
    <string name="quantity_placeholder">Quantity: %d</string>
    <string name="update_order_status">Update order status</string>
    <string name="order_full_address_placeholder">Address: %s %s, %s, %s, %s %s</string>
</resources>