<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.management.manufacturers.AddManufacturerFragment">

    <EditText
        android:id="@+id/editTextManufacturerName"
        style="@style/edit_text"
        android:autofillHints="name"
        android:hint="@string/hint_manufacturer_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSelectManufacturerLogo"
        style="@style/button"
        android:text="@string/select_manufacturer_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextManufacturerName" />

    <ImageView
        android:id="@+id/imageViewManufacturerLogoPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/image_view_margin"
        android:layout_weight="1"
        android:contentDescription="@string/manufacturer_logo_preview"
        app:layout_constraintBottom_toTopOf="@id/btnSaveManufacturer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSelectManufacturerLogo"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSaveManufacturer"
        style="@style/button"
        android:text="@string/save_manufacturer"
        app:layout_constraintBottom_toTopOf="@id/btnCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewManufacturerLogoPreview" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/button"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSaveManufacturer" />

    <ProgressBar
        android:id="@+id/progressBarAddManufacturerFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>