<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Part Name EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_part_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Price EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Quantity EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPrice">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Device Models EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDeviceModels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_device_models"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilQuantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDeviceModels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Specifications EditText -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSpecifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_specifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDeviceModels">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSpecifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Manufacturer Label -->
        <TextView
            android:id="@+id/textViewManufacturerLabel"
            style="@style/add_part_spinner_label"
            android:text="@string/select_manufacturer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilSpecifications" />

        <!-- Manufacturer Spinner -->
        <Spinner
            android:id="@+id/spinnerManufacturer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewManufacturerLabel" />

        <!-- Device Type Label -->
        <TextView
            android:id="@+id/textViewDeviceTypeLabel"
            style="@style/add_part_spinner_label"
            android:text="@string/select_device_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerManufacturer" />

        <!-- Device Type Spinner -->
        <Spinner
            android:id="@+id/spinnerDeviceType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDeviceTypeLabel" />

        <!-- Part Type Label -->
        <TextView
            android:id="@+id/textViewPartTypeLabel"
            style="@style/add_part_spinner_label"
            android:text="@string/select_part_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerDeviceType" />

        <!-- Part Type Spinner -->
        <Spinner
            android:id="@+id/spinnerPartType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPartTypeLabel" />

        <!-- Button to Add Image -->
        <Button
            android:id="@+id/btnSelectPartImage"
            style="@style/button"
            android:layout_margin="0dp"
            android:text="@string/select_part_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerPartType" />

        <!-- Image View -->
        <ImageView
            android:id="@+id/imageViewPartImagePreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/description_part_image"
            app:layout_constraintBottom_toTopOf="@id/btnSavePart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSelectPartImage"
            tools:src="@tools:sample/avatars" />

        <!-- Button to Save Part -->
        <Button
            android:id="@+id/btnSavePart"
            style="@style/button"
            android:layout_margin="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/save_part"
            app:layout_constraintBottom_toTopOf="@id/btnCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageViewPartImagePreview" />

        <!-- Button to Cancel -->
        <Button
            android:id="@+id/btnCancel"
            style="@style/button"
            android:layout_margin="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSavePart" />

        <ProgressBar
            android:id="@+id/progressBarAddPartFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
